--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "migrate": "node run-migrations.cjs up --config database.json",
     "migrate:down": "node run-migrations.cjs down --config database.json",
-    "build": "tsc",
+    "build": "tsc --watch",
     "start": "NODE_OPTIONS=\"--enable-source-maps\" node lib/index.js"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@google-cloud/pino-logging-gcp-config": "^1.0.2",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
