--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "migrate": "node run-migrations.cjs up --config database.json",
     "migrate:down": "node run-migrations.cjs down --config database.json",
     "build": "tsc --watch",
-    "start": "NODE_OPTIONS=\"--enable-source-maps\" node lib/index.js"
+    "start": "NODE_OPTIONS=\"--enable-source-maps\" node lib/index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
+    "babel-jest": "^29.7.0",
     "db-migrate": "^0.11.14",
     "db-migrate-sqlite3": "^1.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
   "dependencies": {
