--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "db-migrate": "^0.11.14",
     "db-migrate-sqlite3": "^1.0.2",
     "jest": "^29.7.0",
+    "prettier": "^3.5.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
