--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "babel-jest": "^29.7.0",
     "db-migrate": "^0.11.14",
     "db-migrate-sqlite3": "^1.0.2",
+    "firebase-tools": "^13.31.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.1",
     "ts-jest": "^29.2.5",
@@ -31,10 +33,13 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.1.0",
+    "fireorm": "^0.23.3",
     "ocpp-rpc": "^2.1.2",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
+    "reflect-metadata": "^0.1.14",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
